NXT-2447: Return item ids after import (desktop API)
NXT-2447 (Select space items after import)